--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "next": "15.3.5",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "qs": "^6.14.0",
+    "query-string": "^9.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.64.0",
